Fix photo on smaller large screens.

--- a/css/theme.css
+++ b/css/theme.css
@@ -295,10 +295,10 @@ dd {
   }
 
   .photo {
-    height: 240px;
+    height: 140px;
     right: 3rem;
     top: 50%;
-    width: 240px;
+    width: 140px;
 
     transform: translateY(-50%);
   }
@@ -307,6 +307,15 @@ dd {
     clear: both;
     float: none;
     width: 100%;
+  }
+
+}
+
+@media only screen and (min-width: 68em) {
+
+  .photo {
+    height: 240px;
+    width: 240px;
   }
 
 }
